<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PetroChina</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎光临</string>
    <string name="unit_price">6.2/升</string>
    <string name="oils">92#</string>
    <string name="gun">1号枪</string>
    <string name="password">******</string>
    <string name="optiontips">操作提示：</string>
    <string name="tipsone">1、请选择加油方式：定金额/定升数/加满</string>
    <string name="tipstwo">2、请输入金额或升数</string>
	<string name="inpress">请输入</string>
	<string name="kindone">金额</string>
	<string name="kindtwo">升数</string>
    <string name="text">100</string>
    <string name="danweione">元</string>
	<string name="danweitwo">升</string>
	<string name="cardout">退卡</string>
	<string name="couzheng">凑整</string>
	<string name="disktip">U盘已插入</string>
	<string name="copying">正在复制</string>
    
</resources>
