<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="538px"
    android:layout_height="796px"
    android:background="#1874CD" >

    <TextView
        android:id="@+id/option_tips_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:text="@string/optiontips"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/option_tips_01_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginTop="40px"
        android:text="@string/tipsone"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/option_tips_02_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginTop="80px"
        android:text="@string/tipstwo"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/iv_setmoney_one"
        android:layout_width="175px"
        android:layout_height="93px"
        android:layout_marginLeft="2.5px"
        android:layout_marginTop="160px"
        android:src="@drawable/set_money_01" />

    <ImageView
        android:id="@+id/iv_setfill_one"
        android:layout_width="175px"
        android:layout_height="93px"
        android:layout_marginLeft="181.5px"
        android:layout_marginTop="160px"
        android:src="@drawable/set_fill_01" />

    <ImageView
        android:id="@+id/iv_full_one"
        android:layout_width="175px"
        android:layout_height="93px"
        android:layout_marginLeft="360.5px"
        android:layout_marginTop="160px"
        android:src="@drawable/set_full_01" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="60px"
        android:layout_marginTop="263px"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inpress"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_kindoftext_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kindone"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_param_one"
            android:layout_width="110px"
            android:layout_height="50px"
            android:background="#FFFFFF"
            android:gravity="center_vertical|right"
            android:text="@string/text"
            android:textColor="#000000"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_danwei_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danweione"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_below="@+id/linearLayout1" 
        android:background="#000000">
    </LinearLayout>

</RelativeLayout>