<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="538px"
    android:layout_height="796px"
    android:background="#1874CD" >

    <TextView
        android:id="@+id/option_tips_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:text="@string/optiontips"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/option_tips_01_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginTop="40px"
        android:text="@string/tipsone"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/option_tips_02_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginTop="80px"
        android:text="@string/tipstwo"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />
    <TextView 
        android:id="@+id/tv_lastmoney_two"
        android:layout_width="match_parent"
        android:layout_height="40px"
        android:layout_marginTop="120px"
        android:text="卡余额："
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/iv_setmoney_two"
        android:layout_width="175px"
        android:layout_height="93px"
        android:layout_marginLeft="2.5px"
        android:layout_marginTop="180px"
        android:src="@drawable/set_money_01" />

    <ImageView
        android:id="@+id/iv_setfill_two"
        android:layout_width="175px"
        android:layout_height="93px"
        android:layout_marginLeft="181.5px"
        android:layout_marginTop="180px"
        android:src="@drawable/set_fill_01" />

    <ImageView
        android:id="@+id/iv_full_two"
        android:layout_width="175px"
        android:layout_height="93px"
        android:layout_marginLeft="360.5px"
        android:layout_marginTop="180px"
        android:src="@drawable/set_full_01" />

    <LinearLayout
        android:id="@+id/linearLayout1_two"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="60px"
        android:layout_marginTop="263px"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inpress"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_kindoftext_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kindone"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_param_two"
            android:layout_width="110px"
            android:layout_height="50px"
            android:background="#FFFFFF"
            android:gravity="center_vertical|left"
            android:textColor="#000000"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_danwei_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danweione"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2_two"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_below="@+id/linearLayout1_two" 
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/btn_cardout_two"
            android:layout_width="120px"
            android:layout_height="120px"
            android:layout_marginLeft="20px"
            android:text="@string/cardout"
            android:textSize="36sp"/>
        
        <LinearLayout 
            android:layout_width="300px"
            android:layout_height="180px"
            android:orientation="vertical"
            android:layout_marginLeft="130px">
            
            <LinearLayout 
                android:layout_width="300px"
                android:layout_height="60px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <Button 
                    android:id="@+id/btn_100_two"
                    android:layout_width="100px"
                    android:layout_height="50px"
                    android:text="100"
                    android:textSize="28sp"
                    android:textColor="#000000"/>
                <Button 
                    android:id="@+id/btn_200_two"
                    android:layout_width="100px"
                    android:layout_height="50px"
                    android:text="200"
                    android:textSize="28sp"
                    android:textColor="#000000"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="300px"
                android:layout_height="60px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <Button 
                    android:id="@+id/btn_500_two"
                    android:layout_width="100px"
                    android:layout_height="50px"
                    android:text="500"
                    android:textSize="28sp"
                    android:textColor="#000000"/>
                <Button 
                    android:id="@+id/btn_1000_two"
                    android:layout_width="100px"
                    android:layout_height="50px"
                    android:text="1000"
                    android:textSize="28sp"
                    android:textColor="#000000"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="300px"
                android:layout_height="60px"
                android:orientation="horizontal">
                <Button 
                    android:id="@+id/btn_cancel_two"
                    android:layout_width="100px"
                    android:layout_height="50px"
                    android:text="取消"
                    android:textSize="28sp"
                    android:textColor="#000000"/>
                <Button 
                    android:id="@+id/btn_confirm_two"
                    android:layout_width="100px"
                    android:layout_height="50px"
                    android:text="确定"
                    android:textSize="28sp"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>
        
    </LinearLayout>
    <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout2_two"
            android:layout_marginTop="10px">

        <Button
            android:id="@+id/btn_1_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_marginLeft="131px"
            android:text="1" 
            android:textColor="#000000"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_2_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15px"
            android:layout_toRightOf="@+id/btn_1_two"
            android:gravity="center"
            android:text="2"
            android:textColor="#000000"
            android:textSize="30sp" />
        
        <Button
            android:id="@+id/btn_3_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_2_two"
            android:layout_marginLeft="15px"
            android:gravity="center"
            android:text="3" 
            android:textColor="#000000"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_4_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_alignLeft="@+id/btn_1_two"
            android:layout_below="@+id/btn_1_two"
            android:layout_marginTop="10px"
            android:text="4"
            android:textColor="#000000"
            android:textSize="30sp" />
        
        <Button 
            android:id="@+id/btn_5_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_toRightOf="@+id/btn_4_two"
            android:layout_below="@+id/btn_2_two"
            android:layout_marginTop="10px"
            android:layout_marginLeft="15px"
            android:text="5"
            android:textColor="#000000"
            android:textSize="30sp"/>
        
        <Button 
            android:id="@+id/btn_6_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_toRightOf="@+id/btn_5_two"
            android:layout_below="@+id/btn_3_two"
            android:layout_marginTop="10px"
            android:layout_marginLeft="15px"
            android:text="6"
            android:textColor="#000000"
            android:textSize="30sp"/>
        
        <Button
            android:id="@+id/btn_7_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_alignLeft="@+id/btn_4_two"
            android:layout_below="@+id/btn_4_two"
            android:layout_marginTop="10px"
            android:text="7"
            android:textColor="#000000"
            android:textSize="30sp" />
        
        <Button 
            android:id="@+id/btn_8_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_toRightOf="@+id/btn_7_two"
            android:layout_below="@+id/btn_5_two"
            android:layout_marginTop="10px"
            android:layout_marginLeft="15px"
            android:text="8"
            android:textColor="#000000"
            android:textSize="30sp"/>
        
        <Button 
            android:id="@+id/btn_9_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_toRightOf="@+id/btn_8_two"
            android:layout_below="@+id/btn_6_two"
            android:layout_marginTop="10px"
            android:layout_marginLeft="15px"
            android:text="9"
            android:textColor="#000000"
            android:textSize="30sp"/>
        
        <Button
            android:id="@+id/btn_delete_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_alignLeft="@+id/btn_7_two"
            android:layout_below="@+id/btn_7_two"
            android:layout_marginTop="10px"
            android:text="删除"
            android:textColor="#000000"
            android:textSize="28sp" />
        
        <Button 
            android:id="@+id/btn_0_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_toRightOf="@+id/btn_delete_two"
            android:layout_below="@+id/btn_8_two"
            android:layout_marginTop="10px"
            android:layout_marginLeft="15px"
            android:text="0"
            android:textColor="#000000"
            android:textSize="30sp"/>
        
        <Button 
            android:id="@+id/btn_sure_two"
            android:layout_width="80px"
            android:layout_height="50px"
            android:layout_toRightOf="@+id/btn_0_two"
            android:layout_below="@+id/btn_9_two"
            android:layout_marginTop="10px"
            android:layout_marginLeft="15px"
            android:text="确认"
            android:textColor="#000000"
            android:textSize="28sp"/>

    </RelativeLayout>

</RelativeLayout>