<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:orientation="vertical" 
  	android:background="#178FFF">

    <ImageView 
        android:id="@+id/iv_logo"
        android:layout_width="215px"
        android:layout_height="60px"
        android:layout_marginTop="10px"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="432px"
        android:layout_marginRight="433px"
        android:background="@drawable/logo"/>
    
    <com.example.petrochina.ui.CustomView 
        android:id="@+id/vv_advertisement"
        android:layout_width="match_parent"
        android:layout_height="600px"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:background="#FFFFFF"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/tv_welcome_one"
            android:layout_width="538px"
            android:layout_height="118px"
            android:layout_marginRight="2px"
            android:layout_marginBottom="2px"
            android:background="#178FFF"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="32sp"/>
        <TextView 
            android:id="@+id/tv_welcome_two"
            android:layout_width="538px"
            android:layout_height="118px"
            android:layout_marginLeft="2px"
            android:layout_marginBottom="2px"
            android:background="#178FFF"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="32sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="800px"
        android:background="#FFFFFF"
        android:orientation="horizontal">
        
        <RelativeLayout 
            android:id="@+id/view_number_one"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
			android:layout_marginBottom="2px"
			android:layout_marginRight="2px">
            
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/view_number_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
			android:layout_marginBottom="2px"
			android:layout_marginLeft="2px">
            
        </RelativeLayout>
        
        
        
        <!--  
        <RelativeLayout
            android:id="@+id/rl_payment_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px"
            android:background="@drawable/bg_payment"
            android:visibility="gone">
            
            <ImageView
                android:id="@+id/tv_oilcard_two"
                android:layout_width="240px"
                android:layout_height="220px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20px"
                android:layout_marginTop="250px" 
                android:background="@drawable/oil_card"/>

            <ImageView
                android:id="@+id/tv_visacard_two"
                android:layout_width="240px"
                android:layout_height="220px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="250px"
                android:layout_marginRight="20px"
                android:background="@drawable/visa_card" />
            
            <ImageView
                android:id="@+id/tv_cash_two"
                android:layout_width="240px"
                android:layout_height="220px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="500px"
                android:layout_marginLeft="20px"
                android:background="@drawable/cash" />
            
            <ImageView
                android:id="@+id/tv_mobilepay_two"
                android:layout_width="240px"
                android:layout_height="220px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="500px"
                android:layout_marginRight="20px"
                android:background="@drawable/mobilepay" />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_icpwd_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px"
            android:background="@drawable/bg_icpwd"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_icpwd_two"
                android:layout_width="450px"
                android:layout_height="91px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="276px"
                android:text="@string/password"
                android:gravity="center"
                android:textSize="60sp"/>

        </RelativeLayout>
        
        
        <RelativeLayout 
            android:id="@+id/rl_insertcard_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tv_insertcard_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/insert_cart"/>

        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_pickupgun_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tv_pickupgun_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/pickup_gun"/>

        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_confirmoilagain_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tv_confirmoilagain_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/confirm_oil_again"/>

        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_fillingup_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tv_fillingup_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/filling_up"/>

        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_fillfinish_two"
            android:layout_width="538px"
            android:layout_height="796px"
            android:layout_marginTop="2px"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="2px">

            <ImageView
                android:id="@+id/tv_fillfinish_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/finish"/>

        </RelativeLayout>
        
        -->
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="225px"
        android:orientation="horizontal">
        <RelativeLayout 
            android:layout_marginTop="50px"
            android:layout_marginLeft="10px"
            android:layout_height="178px"
            android:layout_width="250px">
            <TextView 
                android:id="@+id/tv_unitprice_one"
                android:layout_width="250px"
                android:layout_height="97px"
                android:background="@drawable/tvstyle"
                android:textColor="#FFFFFF"
                android:text="@string/unit_price"
                android:gravity="center"
                android:textSize="36sp"/>
            <TextView 
                android:id="@+id/tv_oils_one"
                android:layout_width="130px"
                android:layout_height="73px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/oils"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            <TextView 
                android:id="@+id/tv_gun_one"
                android:layout_width="120px"
                android:layout_height="73px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/gun"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_marginTop="50px"
            android:layout_marginLeft="10px"
            android:layout_height="178px"
            android:layout_width="250px">
            <TextView 
                android:id="@+id/tv_unitprice_two"
                android:layout_width="250px"
                android:layout_height="97px"
                android:background="@drawable/tvstyle"
                android:textColor="#FFFFFF"
                android:text="@string/unit_price"
                android:gravity="center"
                android:textSize="36sp"/>
            <TextView 
                android:id="@+id/tv_oils_two"
                android:layout_width="130px"
                android:layout_height="73px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/oils"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            <TextView 
                android:id="@+id/tv_gun_two"
                android:layout_width="120px"
                android:layout_height="73px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/gun"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_marginTop="50px"
            android:layout_marginLeft="40px"
            android:layout_height="178px"
            android:layout_width="250px">
            <TextView 
                android:id="@+id/tv_unitprice_three"
                android:layout_width="250px"
                android:layout_height="97px"
                android:background="@drawable/tvstyle"
                android:textColor="#FFFFFF"
                android:text="@string/unit_price"
                android:gravity="center"
                android:textSize="36sp"/>
            <TextView 
                android:id="@+id/tv_oils_three"
                android:layout_width="130px"
                android:layout_height="73px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/oils"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            <TextView 
                android:id="@+id/tv_gun_three"
                android:layout_width="120px"
                android:layout_height="73px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/gun"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_marginTop="50px"
            android:layout_marginLeft="10px"
            android:layout_height="178px"
            android:layout_width="250px">
            <TextView 
                android:id="@+id/tv_unitprice_four"
                android:layout_width="250px"
                android:layout_height="97px"
                android:background="@drawable/tvstyle"
                android:textColor="#FFFFFF"
                android:text="@string/unit_price"
                android:gravity="center"
                android:textSize="36sp"/>
            <TextView 
                android:id="@+id/tv_oils_four"
                android:layout_width="130px"
                android:layout_height="73px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/oils"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            <TextView 
                android:id="@+id/tv_gun_four"
                android:layout_width="120px"
                android:layout_height="73px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97px"
                android:background="@drawable/tvstyle"
                android:text="@string/gun"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
            
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:layout_marginTop="5px"
        android:background="#0B75FF"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/tv_welcome_buttom_one"
            android:layout_width="540px"
            android:layout_height="95px"
            android:textSize="44sp"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:typeface="sans"
            android:gravity="center"/>
        <TextView 
            android:id="@+id/tv_welcome_buttom_two"
            android:layout_width="540px"
            android:layout_height="95px"
            android:textSize="44sp"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:typeface="sans"
            android:gravity="center"/>
    </LinearLayout>
    

</LinearLayout>
